fix markdown files, display card titles

--- a/src/markdown/2020/06-June/20200601-release.md
+++ b/src/markdown/2020/06-June/20200601-release.md
@@ -1,7 +1,7 @@
 ---
 title: June 2020 Release Notes
-data: "2020-06-01"
+date: "2020-06-01"
 tags: ["tag1", "tag2"]
 ---
 
-I am the release notes for June.
+I am the release notes for June 2020.
