--- a/src/markdown/2020/05-May/20200501-release.md
+++ b/src/markdown/2020/05-May/20200501-release.md
@@ -1,7 +1,7 @@
 ---
 title: May 2020 Release Notes
-data: "2020-05-01"
+date: "2020-05-01"
 tags: ["tag1", "tag2"]
 ---
 
-I am the release notes for May.
+I am the release notes for May 2020.
