--- a/src/markdown/2020/07-July/20200701-release.md
+++ b/src/markdown/2020/07-July/20200701-release.md
@@ -1,7 +1,7 @@
 ---
 title: July 2020 Release Notes
-data: "2020-07-01"
+date: "2020-07-01"
 tags: ["tag1", "tag2"]
 ---
 
-I am the release notes for July.
+I am the release notes for July 2020.
