--- a/src/markdown/2020/08-August/20200801-release.md
+++ b/src/markdown/2020/08-August/20200801-release.md
@@ -1,7 +1,7 @@
 ---
 title: August 2020 Release Notes
-data: "2020-08-01"
+date: "2020-08-01"
 tags: ["tag1", "tag2"]
 ---
 
-I am the release notes for August.
+I am the release notes for August 2020.
